Segundo projeto, aprimorando sobre links e imagens

--- a/Second Project/index.html
+++ b/Second Project/index.html
@@ -7,6 +7,7 @@
     <title>IMG</title>
 </head>
 <body>
-    
+    <img src="images/ferrari.jpg" alt="Imagem de uma ferrari" width="25%">
+    <img src="https://conteudo.imguol.com.br/c/entretenimento/c4/2019/05/29/ferrari-sf90-stradale-1559165263449_v2_4x3.jpg" alt="Imagem de uma ferrari" width="25%">
 </body>
 </html>
