--- a/Third Project/index.html
+++ b/Third Project/index.html
@@ -18,6 +18,13 @@
             <td>15</td>
             <td>Masculino</td>
         </tr>
+        <tr>
+            <td rowspan="2">Desconto</td>
+            <td colspan="2">Cupom1 - R$10</td>
+        </tr>
+        <tr>
+            <td colspan="2">Cupom2 - R$40</td>
+        </tr>
     </table>
 </body>
 </html>
