--- a/Seventh Project/index.html
+++ b/Seventh Project/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        p {
+            color: blue;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1 style="font-family: cursive;">Estilo CSS</h1>
+    <p style="color: red; font-family: Arial, Helvetica, sans-serif; font-size: 1.3em;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum nihil, exercitationem sed iusto ipsa tenetur ducimus necessitatibus qui, dignissimos assumenda soluta officia illum aliquid beatae molestiae nisi tempore quas nostrum.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit sunt blanditiis harum unde, odio mollitia quaerat voluptatum, est magnam explicabo nobis repellat ipsam facere doloremque alias! Corrupti vitae sunt ullam.</p>
 </body>
 </html>
