--- a/Seventh Project/index.html
+++ b/Seventh Project/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
     <style>
         p {
@@ -15,5 +16,7 @@
     <h1 style="font-family: cursive;">Estilo CSS</h1>
     <p style="color: red; font-family: Arial, Helvetica, sans-serif; font-size: 1.3em;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum nihil, exercitationem sed iusto ipsa tenetur ducimus necessitatibus qui, dignissimos assumenda soluta officia illum aliquid beatae molestiae nisi tempore quas nostrum.</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit sunt blanditiis harum unde, odio mollitia quaerat voluptatum, est magnam explicabo nobis repellat ipsam facere doloremque alias! Corrupti vitae sunt ullam.</p>
+    <h2 id="h2teste">Testando</h2>
+    <p class="pteste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, molestiae ratione. Sed officia doloribus non totam rem, praesentium maxime quisquam nobis quia vel aspernatur facilis atque quae deserunt adipisci illum.</p>
 </body>
 </html>
