--- a/Eight Project/index.html
+++ b/Eight Project/index.html
@@ -5,8 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Div e Span</title>
+    <style>
+        .produto {
+            background-color: gray;
+            margin: 10px;
+        }
+
+        #rodape {
+            background: green;
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="topo">
+        <img src="images/amazon.png" alt="Logo Prime vídeo" width="300px">
+        <ul>
+            <li>Home</li>
+            <li>Produtos</li>
+            <li>Contatos</li>
+        </ul>
+    </div>
+    <div id="conteudo">
+        <div class="produto">Produto 1</div>
+        <div class="produto">Produto 2</div>
+        <div class="produto">Produto 3</div>
+    </div>
+    <div id="rodape">
+        Todos os direitos reservados
+    </div>
+    <span id="assinatura">
+        Uma diferença da div para o span é que o span é inline
+    </span>
 </body>
 </html>
